cctp_trader/cctp_trader.h

typedef void(__cdecl *FuncPtrTradeOnRspOptionSelfCloseInsert)(CThostFtdcInputOptionSelfCloseField* pInputOptionSelfClose, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspOptionSelfCloseAction)(CThostFtdcInputOptionSelfCloseActionField* pInputOptionSelfCloseAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspCombActionInsert)(CThostFtdcInputCombActionField* pInputCombAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryOrder)(CThostFtdcOrderField* pOrder, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryTrade)(CThostFtdcTradeField* pTrade, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInvestorPosition)(CThostFtdcInvestorPositionField* pInvestorPosition, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryTradingAccount)(CThostFtdcTradingAccountField* pTradingAccount, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInvestor)(CThostFtdcInvestorField* pInvestor, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryTradingCode)(CThostFtdcTradingCodeField* pTradingCode, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInstrumentMarginRate)(CThostFtdcInstrumentMarginRateField* pInstrumentMarginRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInstrumentCommissionRate)(CThostFtdcInstrumentCommissionRateField* pInstrumentCommissionRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryExchange)(CThostFtdcExchangeField* pExchange, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryProduct)(CThostFtdcProductField* pProduct, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInstrument)(CThostFtdcInstrumentField* pInstrument, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryDepthMarketData)(CThostFtdcDepthMarketDataField* pDepthMarketData, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQrySettlementInfo)(CThostFtdcSettlementInfoField* pSettlementInfo, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryTransferBank)(CThostFtdcTransferBankField* pTransferBank, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInvestorPositionDetail)(CThostFtdcInvestorPositionDetailField* pInvestorPositionDetail, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryNotice)(CThostFtdcNoticeField* pNotice, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQrySettlementInfoConfirm)(CThostFtdcSettlementInfoConfirmField* pSettlementInfoConfirm, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInvestorPositionCombineDetail)(CThostFtdcInvestorPositionCombineDetailField* pInvestorPositionCombineDetail, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryCFMMCTradingAccountKey)(CThostFtdcCFMMCTradingAccountKeyField* pCFMMCTradingAccountKey, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryEWarrantOffset)(CThostFtdcEWarrantOffsetField* pEWarrantOffset, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInvestorProductGroupMargin)(CThostFtdcInvestorProductGroupMarginField* pInvestorProductGroupMargin, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryExchangeMarginRate)(CThostFtdcExchangeMarginRateField* pExchangeMarginRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryExchangeMarginRateAdjust)(CThostFtdcExchangeMarginRateAdjustField* pExchangeMarginRateAdjust, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryExchangeRate)(CThostFtdcExchangeRateField* pExchangeRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQrySecAgentACIDMap)(CThostFtdcSecAgentACIDMapField* pSecAgentACIDMap, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryProductExchRate)(CThostFtdcProductExchRateField* pProductExchRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryProductGroup)(CThostFtdcProductGroupField* pProductGroup, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryMMInstrumentCommissionRate)(CThostFtdcMMInstrumentCommissionRateField* pMMInstrumentCommissionRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryMMOptionInstrCommRate)(CThostFtdcMMOptionInstrCommRateField* pMMOptionInstrCommRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInstrumentOrderCommRate)(CThostFtdcInstrumentOrderCommRateField* pInstrumentOrderCommRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
    API_EXPORT void RegisterTradeFPOnRspOptionSelfCloseInsert(void* trader, FuncPtrTradeOnRspOptionSelfCloseInsert fp);
    API_EXPORT void RegisterTradeFPOnRspOptionSelfCloseAction(void* trader, FuncPtrTradeOnRspOptionSelfCloseAction fp);
    API_EXPORT void RegisterTradeFPOnRspCombActionInsert(void* trader, FuncPtrTradeOnRspCombActionInsert fp);
    API_EXPORT void RegisterTradeFPOnRspQryOrder(void* trader, FuncPtrTradeOnRspQryOrder fp);
    API_EXPORT void RegisterTradeFPOnRspQryTrade(void* trader, FuncPtrTradeOnRspQryTrade fp);
    API_EXPORT void RegisterTradeFPOnRspQryInvestorPosition(void* trader, FuncPtrTradeOnRspQryInvestorPosition fp);
    API_EXPORT void RegisterTradeFPOnRspQryTradingAccount(void* trader, FuncPtrTradeOnRspQryTradingAccount fp);
    API_EXPORT void RegisterTradeFPOnRspQryInvestor(void* trader, FuncPtrTradeOnRspQryInvestor fp);
    API_EXPORT void RegisterTradeFPOnRspQryTradingCode(void* trader, FuncPtrTradeOnRspQryTradingCode fp);
    API_EXPORT void RegisterTradeFPOnRspQryInstrumentMarginRate(void* trader, FuncPtrTradeOnRspQryInstrumentMarginRate fp);
    API_EXPORT void RegisterTradeFPOnRspQryInstrumentCommissionRate(void* trader, FuncPtrTradeOnRspQryInstrumentCommissionRate fp);
    API_EXPORT void RegisterTradeFPOnRspQryExchange(void* trader, FuncPtrTradeOnRspQryExchange fp);
    API_EXPORT void RegisterTradeFPOnRspQryProduct(void* trader, FuncPtrTradeOnRspQryProduct fp);
    API_EXPORT void RegisterTradeFPOnRspQryInstrument(void* trader, FuncPtrTradeOnRspQryInstrument fp);
    API_EXPORT void RegisterTradeFPOnRspQryDepthMarketData(void* trader, FuncPtrTradeOnRspQryDepthMarketData fp);
    API_EXPORT void RegisterTradeFPOnRspQrySettlementInfo(void* trader, FuncPtrTradeOnRspQrySettlementInfo fp);
    API_EXPORT void RegisterTradeFPOnRspQryTransferBank(void* trader, FuncPtrTradeOnRspQryTransferBank fp);
    API_EXPORT void RegisterTradeFPOnRspQryInvestorPositionDetail(void* trader, FuncPtrTradeOnRspQryInvestorPositionDetail fp);
    API_EXPORT void RegisterTradeFPOnRspQryNotice(void* trader, FuncPtrTradeOnRspQryNotice fp);
    API_EXPORT void RegisterTradeFPOnRspQrySettlementInfoConfirm(void* trader, FuncPtrTradeOnRspQrySettlementInfoConfirm fp);
    API_EXPORT void RegisterTradeFPOnRspQryInvestorPositionCombineDetail(void* trader, FuncPtrTradeOnRspQryInvestorPositionCombineDetail fp);
    API_EXPORT void RegisterTradeFPOnRspQryCFMMCTradingAccountKey(void* trader, FuncPtrTradeOnRspQryCFMMCTradingAccountKey fp);
    API_EXPORT void RegisterTradeFPOnRspQryEWarrantOffset(void* trader, FuncPtrTradeOnRspQryEWarrantOffset fp);
    API_EXPORT void RegisterTradeFPOnRspQryInvestorProductGroupMargin(void* trader, FuncPtrTradeOnRspQryInvestorProductGroupMargin fp);
    API_EXPORT void RegisterTradeFPOnRspQryExchangeMarginRate(void* trader, FuncPtrTradeOnRspQryExchangeMarginRate fp);
    API_EXPORT void RegisterTradeFPOnRspQryExchangeMarginRateAdjust(void* trader, FuncPtrTradeOnRspQryExchangeMarginRateAdjust fp);
    API_EXPORT void RegisterTradeFPOnRspQryExchangeRate(void* trader, FuncPtrTradeOnRspQryExchangeRate fp);
    API_EXPORT void RegisterTradeFPOnRspQrySecAgentACIDMap(void* trader, FuncPtrTradeOnRspQrySecAgentACIDMap fp);
    API_EXPORT void RegisterTradeFPOnRspQryProductExchRate(void* trader, FuncPtrTradeOnRspQryProductExchRate fp);
    API_EXPORT void RegisterTradeFPOnRspQryProductGroup(void* trader, FuncPtrTradeOnRspQryProductGroup fp);
    API_EXPORT void RegisterTradeFPOnRspQryMMInstrumentCommissionRate(void* trader, FuncPtrTradeOnRspQryMMInstrumentCommissionRate fp);
    API_EXPORT void RegisterTradeFPOnRspQryMMOptionInstrCommRate(void* trader, FuncPtrTradeOnRspQryMMOptionInstrCommRate fp);
    API_EXPORT void RegisterTradeFPOnRspQryInstrumentOrderCommRate(void* trader, FuncPtrTradeOnRspQryInstrumentOrderCommRate fp);