CSharpCtp/TraderDllWrapper.cs

        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspOptionSelfCloseInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspOptionSelfCloseInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspOptionSelfCloseInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspOptionSelfCloseAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspOptionSelfCloseActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspOptionSelfCloseActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspCombActionInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspCombActionInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspCombActionInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryOrderCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryOrderDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryTrade",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryTradeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryTradeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInvestorPosition",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInvestorPositionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInvestorPositionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryTradingAccount",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryTradingAccountCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryTradingAccountDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInvestor",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInvestorCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInvestorDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryTradingCode",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryTradingCodeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryTradingCodeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInstrumentMarginRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInstrumentMarginRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInstrumentMarginRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInstrumentCommissionRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInstrumentCommissionRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInstrumentCommissionRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryExchange",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryExchangeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryExchangeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryProduct",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryProductCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryProductDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInstrument",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInstrumentCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInstrumentDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryDepthMarketData",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryDepthMarketDataCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryDepthMarketDataDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQrySettlementInfo",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQrySettlementInfoCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQrySettlementInfoDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryTransferBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryTransferBankCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryTransferBankDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInvestorPositionDetail",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInvestorPositionDetailCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInvestorPositionDetailDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryNotice",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryNoticeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryNoticeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQrySettlementInfoConfirm",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQrySettlementInfoConfirmCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQrySettlementInfoConfirmDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInvestorPositionCombineDetail",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInvestorPositionCombineDetailCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInvestorPositionCombineDetailDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryCFMMCTradingAccountKey",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryCFMMCTradingAccountKeyCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryCFMMCTradingAccountKeyDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryEWarrantOffset",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryEWarrantOffsetCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryEWarrantOffsetDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInvestorProductGroupMargin",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInvestorProductGroupMarginCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInvestorProductGroupMarginDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryExchangeMarginRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryExchangeMarginRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryExchangeMarginRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryExchangeMarginRateAdjust",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryExchangeMarginRateAdjustCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryExchangeMarginRateAdjustDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryExchangeRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryExchangeRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryExchangeRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQrySecAgentACIDMap",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQrySecAgentACIDMapCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQrySecAgentACIDMapDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryProductExchRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryProductExchRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryProductExchRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryProductGroup",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryProductGroupCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryProductGroupDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryMMInstrumentCommissionRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryMMInstrumentCommissionRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryMMInstrumentCommissionRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryMMOptionInstrCommRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryMMOptionInstrCommRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryMMOptionInstrCommRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInstrumentOrderCommRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInstrumentOrderCommRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInstrumentOrderCommRateDelegate callback);
